Fix overlapping layout and responsive issues

--- a/sec4.css
+++ b/sec4.css
@@ -219,7 +219,7 @@
 
 }
 .sec-5 h1{
-    margin-top:20px;
+    margin-top:50px;
     text-align: center;
     font-size:50px;
     font-weight: 600;
